更新public内的头像

--- a/themes/yelee/_config.yml
+++ b/themes/yelee/_config.yml
@@ -35,9 +35,9 @@ root_url:
 ## https://github.com/hexojs/hexo-generator-feed
 
 subnav:
-  Email: "mailto:123@123.com"
+  Email: "1211904437@qq.com"
   #新浪微博: "sina weibo"
-  GitHub: "#"
+  GitHub: "http://github.com/huyansheng3"
   #V2EX: "#"
   RSS: "/atom.xml"
   #知乎: "zhihu"
@@ -74,8 +74,8 @@ disqus:
   # you have set "disqus_shortname" in your site's "_config.yml" 
 
 duoshuo: 
-  #on: true
-  domain: 
+  on: true
+  domain: huyansheng3
   # 是否开启多说评论，http://duoshuo.com/create-site/
   # 使用上面网址登陆你的多说，然后创建站点，在 domain 中填入你设定的域名前半部分
   # http://<要填的部分>.duoshuo.com (domain只填上<>里的内容，不要填整个网址)
@@ -101,7 +101,7 @@ background_image: 5
 color_scheme: 
 
 highlight_style:
-  #on: true
+  on: true
   inline_code: 1  # Value: 0 - 9 可选
   code_block: 1  # Value: 0 - 4 
   # Set inline_code to style highlight text
@@ -110,12 +110,12 @@ highlight_style:
   # 通过 code_block 切换内置代码高亮配色主题
 
 blockquote_style:
-  #on: true
+  on: true
   blockquote: 1  # Value: 0 - 7 可选
   # 自定义文章「引用部分」的样式
 
 # 左边栏宽度 px
-left_col_width: 300
+left_col_width: 280
 
 # Copyright info. of post | 文末版权信息
 copyright: true
@@ -153,7 +153,7 @@ friends:
 #friends: false
 
 #是否开启“关于我”。
-aboutme: 专注于前端
+aboutme: 什么都想学，什么都不会！
 #aboutme: false
 
 # 是否在新窗口打开链接
