--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 风满楼
 subtitle:
-description:
-author: John Doe
-language:
+description: 这里是风满楼同学的个人博客，记录生活与学习，欢迎来玩~
+author: 风满楼
+email: mailto:1211904437@qq.com
+language: zh-Hans
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://huyansheng3.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -68,4 +69,6 @@ theme: yelee
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: github
+  repository: git@github.com:huyansheng3/huyansheng3.github.io.git
+  brach: master
